Clean up the codebase

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ ANTHROPIC_API_KEY=your_anthropic_api_key_here
 # WordPress credentials
 # Use the base URL of your WordPress site (without /wp-admin)
 WP_URL=https://umedoc.com
-WP_USERNAME=quangvu
+WP_USERNAME=your_username_here
 # Generate an application password in WordPress: Users → Profile → Application Passwords
 # Note: If your password contains special characters, do NOT use quotes
-WP_APP_PASSWORD=pW9LD$cO)#WbW*YR5yivR1ab
+WP_APP_PASSWORD=your_application_password_here
